* Keep group range sorted for a more stable response * Simplify the toString of XmlProject